[gd_scene load_steps=6 format=3 uid="uid://dcamwpl3diqoc"]

[ext_resource type="Script" path="res://assets/scripts/scenes/main_scene.gd" id="1_bbunw"]
[ext_resource type="PackedScene" uid="uid://csb8wg2y7ql82" path="res://assets/prefabs/managers/scene_manager.tscn" id="2_q74jk"]
[ext_resource type="PackedScene" uid="uid://cdpdd6sxylx7h" path="res://assets/prefabs/managers/flow_manager.tscn" id="3_od2kc"]
[ext_resource type="PackedScene" uid="uid://cfyquefr30paa" path="res://assets/prefabs/managers/data_manager.tscn" id="4_owqop"]
[ext_resource type="PackedScene" uid="uid://e433ooeivcwr" path="res://assets/prefabs/managers/run_manager.tscn" id="5_0mdm6"]

[node name="MainScene" type="Node" node_paths=PackedStringArray("flowManager", "dataManager", "runManager")]
script = ExtResource("1_bbunw")
flowManager = NodePath("Managers/FlowManager")
dataManager = NodePath("Managers/DataManager")
runManager = NodePath("Managers/RunManager")

[node name="Managers" type="Node" parent="."]

[node name="SceneManager" parent="Managers" node_paths=PackedStringArray("GameSceneTree") instance=ExtResource("2_q74jk")]
GameSceneTree = NodePath("../../GameSceneTree")
metadata/_edit_group_ = true

[node name="FlowManager" parent="Managers" node_paths=PackedStringArray("_sceneManager") instance=ExtResource("3_od2kc")]
_sceneManager = NodePath("../SceneManager")

[node name="DataManager" parent="Managers" instance=ExtResource("4_owqop")]

[node name="RunManager" parent="Managers" instance=ExtResource("5_0mdm6")]

[node name="GameSceneTree" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
